<resources>
    <string name="app_name">XChange Calculus</string>
    <string name="app_name_with_break">Currency <br />Converter</string>
    <string name="exchange_rate"><u>Mid-market exchange rate at 13:38UTC</u> </string>
    <string name="get_rate_alert"><u>Get rate alerts straight to your email inbox</u> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_converter">Currency Converter</string>

    <string name="clear">CLR</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="division">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="height">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="calculator_menu">Calculator</string>
</resources>